# moodle_chatbot

./: README.md  chatbot.py  file_extraction.ipynb  functions.py  moodle-scrapping.ipynb  pyproject.toml  test_rag.ipynb
