[tool.poetry]
name = "projet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"
ipykernel = "^6.29.5"
requests = "^2.32.3"
pypdf2 = "^3.0.1"
docx = "^0.2.4"
openpyxl = "^3.1.5"
pypdf = "^5.1.0"
python-docx = "^1.1.2"
pycryptodome = "^3.21.0"
langchain = "^0.3.14"
langchain-community = "^0.3.14"
chromadb = "^0.6.3"
streamlit = "^1.41.1"
ollama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
